--- a/css/styles.css
+++ b/css/styles.css
@@ -3761,6 +3761,14 @@ body.mobile-tabs-active[data-active-tab="overview"] .my-baker-section.visible {
     opacity: 1;
 }
 
+#briefing-toggle.active {
+    opacity: 1;
+}
+
+#briefing-toggle:not(.active) {
+    opacity: 0.5;
+}
+
 #price-intel-toggle.active {
     opacity: 1;
 }
